# asterisk-ari-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  docker-compose.yml
.github/workflows/: build.yml  release.yml
asterisk/: Dockerfile  README.md
asterisk/configs/: ari.conf  asterisk.conf  extensions.conf  pjsip.conf
examples/: main.rs  monkeys-example.rs
examples/asterisk/: README.md  docker-compose.yml  docker-entrypoint.sh
examples/asterisk/configs/: pjsip_wizard.conf  rtp.conf
src/: client.rs  config.rs  errors.rs  lib.rs
src/apis/: client.rs  mod.rs
src/apis/applications/: mod.rs  models.rs  params.rs
src/apis/asterisk/: mod.rs  models.rs
src/apis/asterisk/dynamic_config/: mod.rs  models.rs  params.rs
src/apis/asterisk/logging/: mod.rs  models.rs  params.rs
src/apis/asterisk/modules/: mod.rs  models.rs
src/apis/asterisk/variables/: mod.rs  models.rs
src/apis/bridges/: mod.rs  models.rs  params.rs
src/apis/channels/: mod.rs  models.rs  params.rs
src/apis/device_stats/: mod.rs  models.rs
src/apis/endpoints/: mod.rs  models.rs  params.rs
src/apis/events/: mod.rs  params.rs
src/apis/mailboxes/: mod.rs  models.rs
src/apis/playbacks/: mod.rs  models.rs
src/apis/recordings/: mod.rs  models.rs
src/apis/sounds/: mod.rs  models.rs
src/ws/: client.rs  mod.rs  models.rs  params.rs
